# AMAH

./: .gitignore  A installer pour la série  README.md
software/: CMakeLists.txt  options.cmake
software/android/SocketAndroid/: AndroidManifest.xml
software/java/: .classpath  .project
software/java/src/: lanceur.java
software/java/src/affichage/: AccelerometerNoise.java  Affichage.java  Fenetre.java  Tableau.java
software/java/src/container/: Container.java  Service.java
software/java/src/hexapode/: Deplacement.java  Direction.java  EnnemiException.java  EnumPatte.java  Etat.java  GoToException.java  Hexapode.java  Moteur.java  Patte.java  TriMoteur.java  Vec2.java
software/java/src/markov/: Etat.java  Markov.java
software/java/src/scripts/: Decision.java  Script.java  ScriptFresques.java  ScriptShootFeu.java  ScriptTorches.java
software/java/src/serial/: Serial.java  SerialException.java  SerialManager.java  SerialManagerException.java  SpecificationCard.java
software/java/src/socket/: SocketClient.java
software/java/src/test/: IntPair.java  Markov.java  MarkovNCoups.java  StandStillTest.java  Test.java  TestCoordinationPattes.java  TestDeuxCoups.java  (+5 more)
software/java/upload/: upload.sh
software/pc/: CMakeLists.txt  Hexapod.hpp  Leg.hpp  Servo.hpp  main.cpp  utility.hpp
software/pc/NeuralNetwork/: Network.hpp  NeuralNet0.cpp  Neuron.hpp  NeuronLinear.hpp  NeuronRectifiedLinear.hpp  NeuronSigmoid.hpp  NeuronStep.hpp  NeuronTanh.hpp
software/pc/reseauDeNeurones/: CMakeLists.txt  reseauDeNeurones.cmake
software/testsPython/: testPython.py
(+46 files in other folders)
